<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="connection_succeed">Log in succeeded!</string>
    <string name="error_authentication_canceled">Log in failed</string>
    <string name="error_no_internet">No internet connection</string>
    <string name="error_unknown_error">Unknown error occurred</string>
    <string name="app_description">Find a nice restaurants and invite your co-workers for lunch !</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="is_eating_at"> is eating at</string>
    <string name="not_going_to_restaurant_yet">Not going to restaurant (yet ?)</string>
    <string name="website_unavailable">website not available</string>

    <string name="fb_login_protocol_scheme">fb3320128438266102</string>
    <string name="firebase_web_client_id">863376647598-1fs4tds46kqk8521gai41dtbekrd0glm.apps.googleusercontent.com</string>

    <string name="shared_preferences_user_lunch_restaurant_boolean">shared preferences user lunch restaurant boolean</string>
    <string name="shared_preferences_user_lunch_restaurant_name_string">shared preferences user lunch restaurant name string</string>
    <string name="shared_preferences_user_lunch_restaurant_id_int">shared  preferences user lunch restaurant id int</string>

    <string name="international_phone_number_unavailable">international phone number not available</string>
    <string name="user_is_joining"> is joining!</string>
    <string name="add_to_liked_restaurant_list">added to liked restaurant list</string>
    <string name="is_already_liked"> is already liked</string>
    <string name="you_will_not_go_to">you won\'t go to \u0020</string>
    <string name="email_unavailable">Email unavailable</string>
    <string name="you_will_go_to">you will go to \u0020</string>
    <string name="for_lunch">\u0020for lunch</string>
    <string name="open">OPEN</string>
    <string name="closed">CLOSED</string>
    <string name="removed_from_the_liked_restaurant_list">removed from the liked restaurant List</string>
    <string name="did_not_decide_where_to_lunch">You didn\'t decide where to lunch yet</string>
    <string name="i_am_hungry">I am Hungry!</string>
    <string name="available_workmates">Available Workmates</string>
    <string name="facebook_log_in_canceled">Facebook log in canceled</string>
    <string name="error_occurred">Error occurred : </string>
    <string name="google_log_in_failed">Google log in failed</string>
    <string name="google_log_in_canceled">Google log in canceled</string>
    <string name="channel_name">channel\u00201</string>
    <string name="channel_description">channel description\u00201</string>
    <string name="log_in_with_google">Log in with google</string>
    <string name="log_in_with_facebook">Log in with facebook</string>
    <string name="log_in_with_twitter">Log in with Twitter</string>
    <string name="twitter_log_in_failed">Twitter Log In Failed</string>
    <string name="location_is_not_authorized_please_authorize_in_settings">Location is not authorized.\nPlease authorize locationResponse permission in settings</string>
    <string name="today_lunch_list">Today\'s Lunch list !</string>
</resources>