<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue">

    <ImageView
        android:id="@+id/imageView_icon"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_dinner_dining_24"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/textView_appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/orange"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/imageView_icon"
        app:layout_constraintStart_toStartOf="@id/imageView_icon"
        app:layout_constraintTop_toBottomOf="@id/imageView_icon" />

    <TextView
        android:id="@+id/textView_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:maxLines="1"
        android:text="@string/app_description"
        android:textColor="@color/orange"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_appName" />


    <Button
        android:id="@+id/Button_googleLogIn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:drawableLeft="@drawable/ic_google_logo"
        android:text="@string/log_in_with_google"
        app:layout_constraintBottom_toTopOf="@+id/Button_facebookLogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_description" />

    <Button
        android:id="@+id/Button_facebookLogIn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_500"
        android:drawableLeft="@drawable/com_facebook_button_icon"
        android:text="@string/log_in_with_facebook"
        app:layout_constraintBottom_toTopOf="@+id/button_twitterLogIn"
        app:layout_constraintEnd_toEndOf="@+id/Button_googleLogIn"
        app:layout_constraintStart_toStartOf="@+id/Button_googleLogIn"
        app:layout_constraintTop_toBottomOf="@+id/Button_googleLogIn" />

    <Button
        android:id="@+id/button_twitterLogIn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:drawableLeft="@drawable/ic_twitter_logo"
        android:text="@string/log_in_with_twitter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Button_facebookLogIn"
        app:layout_constraintStart_toStartOf="@+id/Button_facebookLogIn"
        app:layout_constraintTop_toBottomOf="@+id/Button_facebookLogIn" />

</androidx.constraintlayout.widget.ConstraintLayout>
